# microvm-blueprint

./: ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md
microvm-blueprint-bin/: Cargo.toml
microvm-blueprint-bin/src/: main.rs
microvm-blueprint-lib/: Cargo.toml
microvm-blueprint-lib/src/: errors.rs  jobs.rs  lib.rs  model.rs  provider.rs  query.rs  runner.rs
microvm-runtime/: Cargo.toml
microvm-runtime/src/: error.rs  lib.rs  model.rs  provider.rs
microvm-runtime/src/adapters/: firecracker.rs  in_memory.rs  mod.rs
