[workspace]
members = [
  "microvm-blueprint-lib",
  "microvm-blueprint-bin",
]
resolver = "2"

[workspace.dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "sync", "net"] }
