[package]
name = "microvm-blueprint-bin"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "microvm-blueprint"
path = "src/main.rs"

[dependencies]
microvm-blueprint-lib = { path = "../microvm-blueprint-lib" }
blueprint-sdk = { workspace = true, features = ["std", "tangle"] }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
