[package]
name = "microvm-blueprint-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
blueprint-sdk = { workspace = true, features = ["std", "tangle", "macros"] }
axum = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
